<resources>
    <string name="app_name">Checkup Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alireza Amirkhani</string>
    <string name="nav_header_subtitle">Amirkhany"gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="network_error">Network error</string>
    <string name="splash_error">Loading error</string>
    <string name="action_drawer">Drawer</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_exit">Exit</string>
    <string name="nav_home">Home</string>
    <string name="nav_device">Device</string>
    <string name="nav_meintenance">Maintenance</string>
    <string name="nav_calibration">Calibration</string>
    <string name="nav_task">Tasks</string>
    <string name="nav_message">Messages</string>

</resources>
